some design enhanced

--- a/book-details.html
+++ b/book-details.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wishlist</title>
+    <title>Book Details</title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
@@ -17,11 +17,8 @@
       </div>
     </nav>
 
-    <main>
-      <h1>Wishlist</h1>
-      <div id="wishlist-container"></div>
-    </main>
+    <div id="book-details-container"></div>
 
-    <script src="js/wishlist.js"></script>
+    <script src="js/book-details.js"></script>
   </body>
 </html>
