--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   </head>
   <body>
     <nav class="navbar">
-      <h1>Gutenberg Books</h1>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="wishlist.html">Wishlist</a></li>
-      </ul>
+      <div class="nav-container">
+        <h1><a href="index.html">Gutenberg Books </a></h1>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="wishlist.html">Wishlist</a></li>
+        </ul>
+      </div>
     </nav>
 
     <div class="search-bar">
@@ -23,7 +25,6 @@
       />
       <select id="genre-filter">
         <option value="">All Genres</option>
-        <!-- Populate this dynamically -->
       </select>
     </div>
 
@@ -32,9 +33,9 @@
     </div>
 
     <div class="pagination">
-      <button id="prev-page">Previous</button>
-      <span id="current-page">1</span>
-      <button id="next-page">Next</button>
+      <button id="prev-page" class="pagination-btn">Previous</button>
+      <span id="current-page"></span>
+      <button id="next-page" class="pagination-btn">Next</button>
     </div>
 
     <script src="js/app.js"></script>
