--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav class="navbar">
       <div class="nav-container">
-        <h1><a href="index.html">Gutenberg Books </a></h1>
+        <h1>Gutenberg Books</h1>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="wishlist.html">Wishlist</a></li>
