--- a/wishlist.html
+++ b/wishlist.html
@@ -18,7 +18,7 @@
     </nav>
 
     <main>
-      <h1>Wishlist</h1>
+      <div class="wishlist-main-container"><h1>Wishlist</h1></div>
       <div id="wishlist-container"></div>
     </main>
 
