list page design completd

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         placeholder="Search books by title..."
       />
       <select id="genre-filter">
-        <option value="">All Genres</option>
+        <option value="">All Genres/Topics</option>
       </select>
     </div>
 
