add x icon for search text clear

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </nav>
 
     <div class="search-bar">
-      <input
-        type="text"
-        id="search-input"
-        placeholder="Search books by title..."
-      />
+      <div id="search-container">
+        <input type="text" id="search-input" placeholder="Search books..." />
+        <span id="clear-search" class="clear-icon">&times;</span>
+      </div>
+
       <select id="genre-filter">
         <option value="">All Genres/Topics</option>
       </select>
