--- a/book-details.html
+++ b/book-details.html
@@ -16,7 +16,9 @@
         </ul>
       </div>
     </nav>
-
+    <div id="loader" class="loader hidden">
+      <div class="spinner"></div>
+    </div>
     <div id="book-details-container"></div>
 
     <script src="js/book-details.js"></script>
