--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         </ul>
       </div>
     </nav>
+    <div id="loader" class="loader hidden">
+      <div class="spinner"></div>
+    </div>
 
     <div class="search-bar">
       <div id="search-container">
